# pro_3

./: CMakeLists.txt  README.md
raport/: Untitled.ipynb
raport/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: main.cpp
src/scikit_build_example/: __init__.py
